force-app/main/default/objects/PatientSubmission__e/PatientSubmission__e.object-meta.xml
<CustomObject>
    <label>PatientSubmission</label>
    <pluralLabel>PatientSubmissions</pluralLabel>
</CustomObject>