force-app/main/default/objects/PatientSubmission__e/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <label>Contact_Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>