force-app/main/default/objects/PatientSubmission__e/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <label>Contact_Phone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>