force-app/main/default/objects/PatientSubmission__e/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <label>Opportunity_Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>