force-app/main/default/objects/PatientSubmission__e/fields/Patient_Email__c.field-meta.xml
<CustomField>
    <fullName>Patient_Email__c</fullName>
    <label>Patient_Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>