force-app/main/default/objects/PatientSubmission__e/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <label>Patient_Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>