force-app/main/default/objects/PatientSubmission__e/fields/Patient_Phone__c.field-meta.xml
<CustomField>
    <fullName>Patient_Phone__c</fullName>
    <label>Patient_Phone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>